--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: ribbit_development
+  database: RibbitApp_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ribbit_test
+  database: RibbitApp_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: ribbit_production
-  username: ribbit
-  password: <%= ENV['RIBBIT_DATABASE_PASSWORD'] %>
+  database: RibbitApp_production
+  username: RibbitApp
+  password: <%= ENV['RIBBITAPP_DATABASE_PASSWORD'] %>
